WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228155
macOS key-driven smooth scrolling does not work for spacebar
https://bugs.webkit.org/show_bug.cgi?id=228155
Summary
macOS key-driven smooth scrolling does not work for spacebar
Dana Estra
Reported
2021-07-21 12:26:41 PDT
spacebar and spacebar+shift do not case any movement
Attachments
Patch
(1.50 KB, patch)
2021-07-26 12:24 PDT
,
Dana Estra
no flags
Details
Formatted Diff
Diff
Patch
(1.51 KB, patch)
2021-07-26 12:40 PDT
,
Dana Estra
no flags
Details
Formatted Diff
Diff
Patch
(1.51 KB, patch)
2021-07-28 13:21 PDT
,
Dana Estra
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-07-21 12:37:40 PDT
<
rdar://problem/80911775
>
Dana Estra
Comment 2
2021-07-26 12:24:39 PDT
Created
attachment 434224
[details]
Patch
Dana Estra
Comment 3
2021-07-26 12:40:29 PDT
Created
attachment 434226
[details]
Patch
Tim Horton
Comment 4
2021-07-26 13:05:18 PDT
Comment on
attachment 434226
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=434226&action=review
> Source/WebCore/platform/KeyboardScrollingAnimator.cpp:237 > - if (event.type() != eventNames().keydownEvent) > + if (!(event.type() == eventNames().keydownEvent || event.type() == eventNames().keypressEvent))
Hmm, I'm not sure this is right. Are you not getting `keydown` for the spacebar? If not, you probably want to figure out who is eating it.
Tim Horton
Comment 5
2021-07-28 12:17:44 PDT
Comment on
attachment 434226
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=434226&action=review
>> Source/WebCore/platform/KeyboardScrollingAnimator.cpp:237 >> + if (!(event.type() == eventNames().keydownEvent || event.type() == eventNames().keypressEvent)) > > Hmm, I'm not sure this is right. Are you not getting `keydown` for the spacebar? If not, you probably want to figure out who is eating it.
I guess it's OK (a bit weird, but existing weirdness); EventHandler::defaultSpaceEventHandler itself asserts it's only called with keypress, and the other callers of this call it explicitly only for keydown, so we won't get duplicates.
Tim Horton
Comment 6
2021-07-28 13:09:39 PDT
Can't cq+ this till the other patch lands :)
Dana Estra
Comment 7
2021-07-28 13:21:48 PDT
Created
attachment 434453
[details]
Patch
EWS
Comment 8
2021-07-30 16:04:14 PDT
Committed
r280501
(
240133@main
): <
https://commits.webkit.org/240133@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434453
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug