Add spacebar functionality for macOS smooth scrolling https://bugs.webkit.org/show_bug.cgi?id=228155

Patch by Dana Estra <destra@apple.com> on 2021-07-30
Reviewed by Tim Horton.

Fixed bug that was causing spacebar events to return false from beginKeyboardScrollGesture.

Manually tested on webpage.

* platform/KeyboardScrollingAnimator.cpp:
(WebCore::KeyboardScrollingAnimator::beginKeyboardScrollGesture):

Canonical link: https://commits.webkit.org/240133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280501 268f45cc-cd09-0410-ab3c-d52691b4dbfc